# Anki-Android

./: .gitignore  gradle.properties  settings.gradle.kts
AnkiDroid/: build.gradle
AnkiDroid/src/main/: AndroidManifest.xml
AnkiDroid/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
AnkiDroid/src/main/java/com/ichi2/anki/: DeckPicker.kt  DrawingFragment.kt  Import.kt  Reviewer.kt  TextContentImportActivity.kt
AnkiDroid/src/main/java/com/ichi2/anki/analytics/: UsageAnalytics.kt
AnkiDroid/src/main/java/com/ichi2/anki/contextmenu/: DeckPickerMenuContentProvider.kt
AnkiDroid/src/main/java/com/ichi2/anki/dialogs/: DatabaseErrorDialog.kt  DeckPickerContextMenu.kt  ImportFileSelectionFragment.kt
AnkiDroid/src/main/java/com/ichi2/anki/multimedia/: MultimediaImageFragment.kt
AnkiDroid/src/main/java/com/ichi2/anki/preferences/: AdvancedSettingsFragment.kt
AnkiDroid/src/main/java/com/ichi2/anki/speech/: WhisperEngine.kt  WhisperModelManager.kt
AnkiDroid/src/main/java/com/ichi2/anki/ui/windows/reviewer/whiteboard/: WhiteboardFragment.kt
AnkiDroid/src/main/java/com/ichi2/imagecropper/: ImageCropper.kt  ImageCropperLauncher.kt
AnkiDroid/src/main/res/layout/: activity_audio_recording_reviewer.xml  activity_text_content_import.xml  colorpicker_flag_bubble.xml
AnkiDroid/src/main/res/menu/: image_cropper_menu.xml
AnkiDroid/src/main/res/values/: 01-core.xml  02-strings.xml  03-dialogs.xml  11-arrays.xml
AnkiDroid/src/main/res/values-zh-rCN/: 02-strings.xml  03-dialogs.xml
AnkiDroid/src/main/res/xml/: preferences_advanced.xml
gradle/: libs.versions.toml
